landing page, fixed headerbar to top of view, added top/body body padding to prevent header/footer overlaps

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
-  padding: 0;
+  padding-top: 75px;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 75px;
   font-family: 'Ubuntu', sans-serif;
   background-color: #353535;
   color: white;
